--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.22.3"
+  },
+  "dependencies": {
+    "@chainlink/contracts": "^1.1.0"
   }
 }
